scrollbar fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,17 @@ a {
 * {
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px white; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(179, 179, 179); 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: grey; 
+}
